Adding author image files. Adding js converted by babel instead of using pure JSX.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,38 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-material-design.min.css">
 	<link rel="stylesheet" type="text/css" href="css/ripples.min.css">
 
-	<!-- jQuery -->
-  	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/app.css">
+
 </head>
 <body>
-	<div id='app'></div>
+	<div class="jumbotron">
+		<div class="container">
+			<h1>Author Quiz</h1>
+			<p>Select the book written by the author shown.</p>
+		</div>
+	</div>
+	
+	<div id="app"></div>
+
+	<div id="footer">
+		<div class="container">
+			<p class="credit text-muted">
+				All images are from <a href="http://commons.wikimedia.org/wiki/Main_Page">Wikimedia Commons</a> and are in the public domain.
+			</p>
+		</div>
+	</div>
+	<!-- jQuery -->
+  	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 
 	<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 
 	<script type="text/javascript" src="js/react/react.js"></script>
 	<script type="text/javascript" src="js/react/react-dom.js"></script>
-	<script src="js/react/browser.min.js"></script>
 
 	<script type="text/javascript" src="js/bootstrap/material.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap/ripples.min.js"></script>
 
-	<script type="text/babel" src="js/app.js"></script>
+	<script type="text/javascript" src="js/underscore.js"></script>
+	<script type="text/javascript" src="js/build/app.js"></script>
 </body>
 </html>
