Finishing video course. Still missing some adjustments.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<script type="text/javascript" src="js/bootstrap/ripples.min.js"></script>
 
 	<script type="text/javascript" src="js/underscore.js"></script>
+	<script type="text/javascript" src="js/routie.js"></script>
 	<script type="text/javascript" src="js/build/app.js"></script>
 </body>
 </html>
